force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>Object to store employee details.</description>
    <label>Employee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>