force-app/main/default/objects/Employee__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Field to store employee&apos;s first name.</description>
    <inlineHelpText>Field to store employee&apos;s first name.</inlineHelpText>
    <label>First Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>