force-app/main/default/objects/Employee__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to store employee&apos;s mentor.</description>
    <inlineHelpText>Field to store employee&apos;s mentor.</inlineHelpText>
    <label>Mentor</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Mentors</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>