force-app/main/default/objects/Employee__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Field to store employee&apos;s middle name.</description>
    <inlineHelpText>Field to store employee&apos;s middle name.</inlineHelpText>
    <label>Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>