force-app/main/default/objects/Employee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Field to store employee&apos;s role.</description>
    <inlineHelpText>Field to store employee&apos;s role.</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>